--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </li>
                 </ul>
                 <form class="d-flex justify-content-center g-2">
-                    <button class="btn btn-outline-dark mx-5 px-5 " type="submit">Sign in</button>
+                    <button class="btn btn-outline-dark mx-5 px-5 " type="submit">Sign in.</button>
                   </form>
             </div>
         </div>
